[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/player_death.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/playerShield.png" type="Texture" id=5]
[ext_resource path="res://assets/sfx/lost_shield.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/power_up_spawn.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37, 41 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38, 43 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 90.0
angular_velocity = 417.6
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 24.0
color = Color( 0.956863, 0.984314, 0.219608, 1 )
hue_variation = -1.0

[sub_resource type="Animation" id=4]
resource_name = "Zoom"
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.25, 0.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Vector2( 0, -350 ), Vector2( 0, -60 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"EnemyDeath",
]]
collision_mask = 8
script = ExtResource( 2 )
speed = Vector2( 500, 1400 )
gravity = 4000.0

[node name="player" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 1 )

[node name="shield" type="Sprite" parent="."]
modulate = Color( 0.172549, 1, 0, 1 )
position = Vector2( 0, -49 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -41 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
modulate = Color( 0.109804, 0.980392, 0.0117647, 1 )
position = Vector2( 0, -350 )
current = true
limit_left = 0
limit_top = 0
limit_right = 50000
limit_bottom = 2500
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.75
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="EnemyDetector" type="Area2D" parent="."]
position = Vector2( 0, -2 )
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
modulate = Color( 0.0784314, 0.152941, 0.960784, 1 )
position = Vector2( 0, -41 )
shape = SubResource( 2 )

[node name="LostShieldSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Effects"

[node name="PlayerDeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -47 )
emitting = false
amount = 5000
one_shot = true
explosiveness = 0.25
process_material = SubResource( 3 )

[node name="PlayerDied" type="AnimationPlayer" parent="."]
anims/Zoom = SubResource( 4 )

[node name="HitTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="PowerUpSpawn" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "Effects"
[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
